Added functionality to process sequential incipits of music and generate corresponding WAV files
Also includes example incipits of music

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ ML/models/frozen_s.pb
 ML/models/frozen2.pb
 ML/models/semantic_model.data-00000-of-00001
 RESOURCES/Semantic-Model/semantic_model.data-00000-of-00001
+ML/models/semantic_model.7z
+ML/models/semantic_model.zip
